Removed commander from project. Cleaned up command switch.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,5 @@
   },
   "author": "Chad Collins",
   "license": "ISC",
-  "dependencies": {
-    "commander": "^2.9.0"
-  }
+  "dependencies": {}
 }
