--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Packaging framework with Webpack for ReactJs with TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/tsc -p src/lib/&./node_modules/.bin/tsc -p src/bin"
   },
   "keywords": [
     "ReactJs",
@@ -16,7 +17,7 @@
     "sass"
   ],
   "bin": {
-    "rts-seed": "./bin/rts-seed"
+    "rts-seed": "./bin/rts-seed.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
   "license": "ISC",
   "dependencies": {
     "glob": "^7.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^2.2.1"
   }
 }
