--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/tsc -p src/lib/&./node_modules/.bin/tsc -p src/bin",
+    "build-bin": "./node_modules/.bin/tsc -p src/bin",
+    "build-lib": "./node_modules/.bin/tsc -p src/lib/",
+    "rename-d-ts": "mv ./rts-fw.d.ts ./index.d.ts",
+    "build": "npm run build-lib&npm build-bin&npm run rename-d-ts",
     "watch-bin": "./node_modules/.bin/tsc -p src/bin/ --watch",
     "watch-lib": "./node_modules/.bin/tsc -p src/lib/ --watch",
     "watch": "npm run watch-bin&npm run watch-lib"
