--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Packaging framework with Webpack for ReactJs with TypeScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build-bin": "./node_modules/.bin/tsc -p src/bin",
     "build-lib": "./node_modules/.bin/tsc -p src/lib/",
     "rename-d-ts": "mv ./rts-fw.d.ts ./index.d.ts",
@@ -36,7 +36,24 @@
   },
   "devDependencies": {
     "@types/glob": "^5.0.30",
+    "@types/jest": "^19.2.2",
     "@types/node": "^7.0.8",
+    "jest": "^19.0.2",
+    "ts-jest": "^19.0.1",
     "typescript": "^2.2.1"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "globals": {
+      "__TS_CONFIG__": "src/bin/tsconfig.json"
+    }
   }
 }
