--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
   "devDependencies": {
     "@types/glob": "^5.0.30",
     "@types/jest": "^19.2.2",
+    "@types/jquery": "^2.0.41",
     "@types/node": "^7.0.8",
+    "@types/react": "^15.0.16",
+    "@types/react-dom": "^0.14.23",
     "fs-extra": "^2.1.2",
     "jest": "^19.0.2",
     "ts-jest": "^19.0.1",
