Updated ts config with new file name Fixed compiler error in react-flares.ts

--- a/src/bin/tsconfig.json
+++ b/src/bin/tsconfig.json
@@ -7,7 +7,7 @@
     "noImplicitAny": true
   },
   "include": [
-    "./rts-seed.ts"
+    "./react-flares.ts"
   ],
   "exclude": [
     "node_modules"
