--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build-bin": "./node_modules/.bin/tsc -p src/bin",
-    "build-lib": "./node_modules/.bin/tsc -p src/lib",
+    "build-lib": "./node_modules/.bin/webpack",
     "rename-d-ts": "mv ./dist/react-flares.d.ts ./index.d.ts",
     "build": "npm run build-lib&npm run build-bin",
     "watch-bin": "./node_modules/.bin/tsc -p src/bin/ --watch",
@@ -43,6 +43,7 @@
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
+    "awesome-typescript-loader": "^3.1.2",
     "fs-extra": "^2.1.2",
     "jest": "^19.0.2",
     "ts-jest": "^19.0.1",
