--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - npm install
 script:
   - npm test
-  - npm build
-  - npm rename-d-ts
+  - npm run build
+  - npm run rename-d-ts
   - npm publish
