--- a/package.json
+++ b/package.json
@@ -34,20 +34,30 @@
   "author": "Chad Collins",
   "license": "MIT",
   "dependencies": {
-    "glob": "^7.1.1"
-  },
-  "devDependencies": {
-    "@types/glob": "^5.0.30",
-    "@types/jest": "^19.2.2",
+    "glob": "^7.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
     "awesome-typescript-loader": "^3.1.2",
     "fs-extra": "^2.1.2",
+    "css-loader": "^0.27.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.3",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.13.2",
+    "typescript": "^2.2.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "devDependencies": {
     "jest": "^19.0.2",
     "ts-jest": "^19.0.1",
-    "typescript": "^2.2.1",
-    "webpack": "^2.3.2"
+    "@types/jest": "^19.2.2",
+    "@types/glob": "^5.0.30"
   },
   "jest": {
     "transform": {
