--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "jest": "^19.0.2",
     "ts-jest": "^19.0.1",
     "@types/jest": "^19.2.2",
-    "@types/glob": "^5.0.30"
+    "@types/glob": "^5.0.30",
+    "lerna": "2.0.0-beta.38"
   },
   "jest": {
     "transform": {
