--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "./node_modules/.bin/tsc -p src/bin",
-    "watch": "./node_modules/.bin/tsc -p src/bin/ --watch",
+    "watch": "./node_modules/.bin/tsc -p src/bin/ --watch"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
     "glob": "^7.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-flares": "0.4.0",
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
