--- a/packages/react-flares/tsconfig.json
+++ b/packages/react-flares/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
-    "outDir": "../../dist/",
+    "outDir": "dist/",
     "sourceMap": true,
     "noImplicitAny": true,
     "declaration": true
