--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "./node_modules/.bin/tsc -p src/bin",
-    "watch": "./node_modules/.bin/tsc -p src/bin/ --watch"
+    "build": "tsc",
+    "watch": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,7 @@
     "packaging"
   ],
   "bin": {
-    "react-flares": "./bin/react-flares.js",
-    "flares": "./bin/react-flares.js",
-    "rf": "./bin/react-flares.js"
+    "xliv": "./bin/react-flares.js"
   },
   "author": "Chad Collins <chadrcollins91@gmail.com>",
   "license": "MIT",
@@ -68,9 +66,6 @@
       "ts",
       "tsx",
       "js"
-    ],
-    "globals": {
-      "__TS_CONFIG__": "src/bin/tsconfig.json"
-    }
+    ]
   }
 }
