--- a/packages/xliv/tsconfig.json
+++ b/packages/xliv/tsconfig.json
@@ -3,11 +3,11 @@
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
-    "outDir": "../../bin",
+    "outDir": "bin",
     "noImplicitAny": true
   },
   "include": [
-    "./react-flares.ts"
+    "./src/react-flares.ts"
   ],
   "exclude": [
     "node_modules"
