--- a/packages/react-flares/package.json
+++ b/packages/react-flares/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "rename-d-ts": "mv ./dist/react-flares.d.ts ./index.d.ts",
+    "postbuild": "mv ./dist/react-flares.d.ts ./index.d.ts",
     "watch": "tsc -p src/lib/ --watch"
   },
   "repository": {
