--- a/packages/xliv/tsconfig.json
+++ b/packages/xliv/tsconfig.json
@@ -7,7 +7,7 @@
     "noImplicitAny": true
   },
   "include": [
-    "./src/react-flares.ts"
+    "./src/xliv.ts"
   ],
   "exclude": [
     "node_modules"
