--- a/packages/react-flares/package.json
+++ b/packages/react-flares/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chadrc/react-flares.git"
+    "url": "git+https://github.com/chadrc/xliv.git"
   },
   "keywords": [
     "React",
@@ -20,9 +20,9 @@
   "author": "Chad Collins <chadrcollins91@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chadrc/react-flares/issues"
+    "url": "https://github.com/chadrc/xliv/issues"
   },
-  "homepage": "https://github.com/chadrc/react-flares#readme",
+  "homepage": "https://github.com/chadrc/xliv#readme",
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
