--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-flares",
-  "version": "0.4.0",
-  "description": "Packaging framework with Webpack for ReactJs with TypeScript",
+  "name": "xliv-project",
+  "version": "0.0.0",
+  "description": "Base for XLIV project.",
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "test": "lerna run test",
