--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "test": "lerna run test",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "ci-publish": "lerna publish --canary --yes --skip-git"
   },
   "devDependencies": {
     "lerna": "2.0.0-beta.38"
