Added package for testing xliv commands locally, ignored by lerna Project command will no longer override xliv version in package.json if it exists Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 # Created by .ignore support plugin (hsz.mobi)
 
+### Sandbox files
+packages/xliv-usage-test/*
+!packages/xliv-usage-test/package.json
+
 ### Generated build files
 index.d.ts
 bin/
 tmp/
 dist/
+bin/*
+tmp/*
+dist/*
 
 ### Editor files
 .idea/
