--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "watch": "tsc --watch"
+    "watch": "tsc --watch",
+    "clean": "rm -R tmp"
   },
   "repository": {
     "type": "git",
