--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,12 @@
 {
   "lerna": "2.0.0-beta.38",
+  "commands": {
+    "publish": {
+      "ignore": [
+        "xliv-usage-test/*"
+      ]
+    }
+  },
   "packages": [
     "packages/*"
   ],
