--- a/packages/xliv/config/tsconfig.json
+++ b/packages/xliv/config/tsconfig.json
@@ -5,7 +5,13 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "flares/*": [
+        "app/flares/*"
+      ]
+    }
   },
   "include": [
     "./app/**/*"
