Excluded xliv-usage-test from lerna bootstrapping

--- a/lerna.json
+++ b/lerna.json
@@ -5,6 +5,11 @@
       "ignore": [
         "xliv-usage-test/*"
       ]
+    },
+    "bootstrap": {
+      "ignore": [
+        "xliv-usage-test"
+      ]
     }
   },
   "packages": [
