--- a/packages/xliv/config/tsconfig.json
+++ b/packages/xliv/config/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "commonjs",
     "target": "es5",
     "jsx": "react",
-    "baseUrl": ".",
+    "baseUrl": "../../../",
     "paths": {
       "flares/*": [
         "app/flares/*"
