Updated travis build to install deps in xliv-usage-test

--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,14 @@
   "commands": {
     "publish": {
       "ignore": [
-        "xliv-usage-test/*"
+        "xliv-usage-test/*",
+        "package.json",
+        "travis.json",
+        "lerna.json",
+        "README.md",
+        "LICENSE",
+        ".gitignore",
+        ".npmignore"
       ]
     },
     "bootstrap": {
