--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
+    "build": "tsc&&npm run build-utils",
+    "build-utils": "tsc -p utils",
     "watch": "tsc --watch",
+    "watch-utils": "tsc -p utils --watch",
     "clean": "rm -R tmp"
   },
   "repository": {
