--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -33,19 +33,20 @@
   },
   "homepage": "https://github.com/chadrc/xliv#readme",
   "dependencies": {
-    "glob": "^7.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-flares": "^2.0.0",
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
     "awesome-typescript-loader": "^3.1.2",
-    "fs-extra": "^2.1.2",
+    "cross-env": "^4.0.0",
     "css-loader": "^0.27.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "fs-extra": "^2.1.2",
+    "glob": "^7.1.1",
     "node-sass": "^4.5.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-flares": "^2.0.0",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.2",
