Began define feature with plugin addition to webpack.config.js and an include in tsconfig.json

--- a/packages/xliv/config/tsconfig.json
+++ b/packages/xliv/config/tsconfig.json
@@ -14,7 +14,8 @@
     }
   },
   "include": [
-    "./app/**/*"
+    "./app/**/*",
+    "./environments/typings.d.ts"
   ],
   "exclude": [
     "node_modules"
