Changed tsconfig to have relative path up out of node_modules before being exposed

--- a/packages/xliv/config/tsconfig.json
+++ b/packages/xliv/config/tsconfig.json
@@ -14,8 +14,8 @@
     }
   },
   "include": [
-    "./app/**/*",
-    "./environments/typings.d.ts"
+    "../../../app/**/*",
+    "../../../environments/typings.d.ts"
   ],
   "exclude": [
     "node_modules"
