Moved common interface into types file tsconfig for xliv src is now in src folder Updated build script for new layout

--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc&&npm run build-utils",
-    "build-utils": "tsc -p utils",
+    "build": "tsc -p src&&tsc -p utils",
     "watch": "tsc --watch",
     "watch-utils": "tsc -p utils --watch",
     "clean": "rm -R tmp"
