--- a/packages/xliv/tsconfig.json
+++ b/packages/xliv/tsconfig.json
@@ -3,12 +3,11 @@
     "module": "commonjs",
     "target": "es6",
     "jsx": "react",
-    "outDir": "../bin",
     "noImplicitAny": true
   },
   "include": [
-    "xliv.ts",
-    "../types.d.ts"
+    "./src/index.ts",
+    "./types.d.ts"
   ],
   "exclude": [
     "tmp",
