Changed configs for new environment paradigm

--- a/packages/xliv/config/tsconfig.json
+++ b/packages/xliv/config/tsconfig.json
@@ -8,14 +8,13 @@
     "jsx": "react",
     "baseUrl": "../../../",
     "paths": {
-      "flares/*": [
-        "app/flares/*"
+      "*": [
+        "app/*"
       ]
     }
   },
   "include": [
-    "../../../app/**/*",
-    "../../../environments/typings.d.ts"
+    "../../../app/**/*"
   ],
   "exclude": [
     "node_modules"
