Updated config for react-hot-load

--- a/packages/xliv/config/tsconfig.json
+++ b/packages/xliv/config/tsconfig.json
@@ -16,6 +16,9 @@
   "include": [
     "../../../app/**/*"
   ],
+  "files": [
+    "../../@types/webpack-env/index.d.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
