--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -35,6 +35,8 @@
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
+    "@types/react-hot-loader": "^3.0.1",
+    "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.1.2",
     "cross-env": "^4.0.0",
     "css-loader": "^0.27.1",
@@ -46,6 +48,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-flares": "^2.0.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.3",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.2",
