--- a/packages/xliv/package.json
+++ b/packages/xliv/package.json
@@ -40,6 +40,7 @@
     "awesome-typescript-loader": "^3.1.2",
     "cross-env": "^4.0.0",
     "css-loader": "^0.27.1",
+    "env-file-resolver-plugin": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "fs-extra": "^2.1.2",
