--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ install:
 script:
 - npm test
 - npm run build
-#after_success:
-#- sh ./npm-login.sh
-#- npm run ci-publish
+after_success:
+- echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
+- npm run ci-publish
