--- a/packages/react-flares/package.json
+++ b/packages/react-flares/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-flares",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A React component to facilitate lazy loading.",
   "main": "index.js",
   "scripts": {
@@ -31,9 +31,9 @@
     "@types/node": "^7.0.8",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
-    "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
+    "awesome-typescript-loader": "^3.1.2",
     "source-map-loader": "^0.2.0",
-    "awesome-typescript-loader": "^3.1.2"
+    "typescript": "^2.2.1",
+    "webpack": "^2.2.1"
   }
 }
